--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
 
 main {
   display: block;
+  padding-bottom: 60px;
 }
 
 :root {
@@ -111,6 +112,8 @@ p {
   margin-inline-end: 0px;
   text-align: center;
   margin: auto;
+  max-width: 50%;
+  padding: 20px;
 }
 
 em {
@@ -118,16 +121,15 @@ em {
 }
 
 img {
-  border-radius: 8px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 100%;
 }
 
 div.polaroid {
   display: block;
-  width: 45%;
+  width: 40%;
   background-color: white;
   box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: auto;
@@ -136,8 +138,14 @@ div.polaroid {
 div.write {
   display: block;
   text-align: center;
-  padding: 10px 20px;
+  padding: 40px 20px;
 }
+
+ul {
+  list-style-type: none;
+}
+
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -168,9 +176,8 @@ button:focus-visible {
 
 footer {
   margin: var(--space);
-  margin-top: auto;
+  margin: auto;
   text-align: center;
-  display: block;
 }
 
 @media (prefers-color-scheme: light) {
