--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
+    color: #eddbdb9e;
+    height: 100%;
   }
   
   .logo {
@@ -42,12 +44,6 @@
   
   .read-the-docs {
     color: #888;
-  }
-  #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
   }
   
   .logo {
